--- a/config/sync/field.field.paragraph.long_course_list_contain_class.field_vih_empty_message.yml
+++ b/config/sync/field.field.paragraph.long_course_list_contain_class.field_vih_empty_message.yml
@@ -9,7 +9,7 @@ id: paragraph.long_course_list_contain_class.field_vih_empty_message
 field_name: field_vih_empty_message
 entity_type: paragraph
 bundle: long_course_list_contain_class
-label: 'Tøm tekst'
+label: 'Tom tekst'
 description: ''
 required: false
 translatable: true
