--- a/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - entity_browser.browser.image_browser
     - field.field.node.vih_long_cource.body
     - field.field.node.vih_long_cource.field_metatag
+    - field.field.node.vih_long_cource.field_short_description
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_heading
     - field.field.node.vih_long_cource.field_vih_course_image
@@ -51,6 +52,7 @@ third_party_settings:
         - field_vih_course_heading
         - field_vih_course_subheading
         - body
+        - field_short_description
       parent_name: ''
       weight: 1
       format_type: tab
@@ -131,6 +133,14 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
+  field_short_description:
+    weight: 7
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
+    region: content
   field_vih_cource_contact_person:
     weight: 11
     settings:
@@ -162,7 +172,7 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_course_periods:
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
@@ -171,21 +181,21 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_course_persons_limit:
-    weight: 6
+    weight: 7
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_course_price:
-    weight: 9
+    weight: 10
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_course_status:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -199,14 +209,14 @@ content:
     type: string_textfield
     region: content
   field_vih_course_subsc_price:
-    weight: 8
+    weight: 9
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_course_week_price:
-    weight: 7
+    weight: 8
     settings:
       placeholder: ''
     third_party_settings: {  }
