--- a/config/sync/core.entity_view_display.node.vih_long_cource.list_advanced.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.list_advanced.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.list_advanced
     - field.field.node.vih_long_cource.body
     - field.field.node.vih_long_cource.field_metatag
+    - field.field.node.vih_long_cource.field_short_description
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_heading
     - field.field.node.vih_long_cource.field_vih_course_image
@@ -24,7 +25,6 @@ dependencies:
   module:
     - image
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -231,14 +231,13 @@ targetEntityType: node
 bundle: vih_long_cource
 mode: list_advanced
 content:
-  body:
-    label: hidden
-    type: text_trimmed
+  field_short_description:
+    type: basic_string
     weight: 1
-    settings:
-      trim_length: 150
-    third_party_settings: {  }
     region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_vih_course_image:
     type: image
     weight: 0
@@ -249,6 +248,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  body: true
   field_banner: true
   field_metatag: true
   field_vih_cource_contact_person: true
