--- a/config/sync/core.entity_view_display.node.vih_long_cource.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.vih_long_cource.body
     - field.field.node.vih_long_cource.field_metatag
+    - field.field.node.vih_long_cource.field_short_description
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_heading
     - field.field.node.vih_long_cource.field_vih_course_image
@@ -24,7 +25,6 @@ dependencies:
   module:
     - image
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -37,13 +37,12 @@ targetEntityType: node
 bundle: vih_long_cource
 mode: teaser
 content:
-  body:
-    type: text_trimmed
+  field_short_description:
+    type: basic_string
     weight: 1
     region: content
     label: hidden
-    settings:
-      trim_length: 150
+    settings: {  }
     third_party_settings: {  }
   field_vih_course_image:
     type: image
@@ -55,6 +54,7 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
+  body: true
   field_banner: true
   field_metatag: true
   field_vih_cource_contact_person: true
