--- a/config/sync/views.view.employees.yml
+++ b/config/sync/views.view.employees.yml
@@ -120,7 +120,19 @@ display:
           expose:
             operator: ''
           group: 1
-      sorts: {  }
+      sorts:
+        field_vih_user_name_first_value:
+          id: field_vih_user_name_first_value
+          table: user__field_vih_user_name_first
+          field: field_vih_user_name_first_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
       header: {  }
       footer: {  }
       empty:
