--- a/config/sync/core.entity_view_display.node.event.list_advanced.yml
+++ b/config/sync/core.entity_view_display.node.event.list_advanced.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.list_advanced
     - field.field.node.event.body
     - field.field.node.event.field_metatag
+    - field.field.node.event.field_short_description
     - field.field.node.event.field_vih_cource_contact_person
     - field.field.node.event.field_vih_course_heading
     - field.field.node.event.field_vih_course_subheading
@@ -24,7 +25,6 @@ dependencies:
     - datetime
     - image
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -37,14 +37,13 @@ targetEntityType: node
 bundle: event
 mode: list_advanced
 content:
-  body:
-    label: hidden
-    type: text_trimmed
-    weight: 3
-    settings:
-      trim_length: 150
-    third_party_settings: {  }
+  field_short_description:
+    type: basic_string
+    weight: 2
     region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_vih_course_heading:
     weight: 0
     label: hidden
@@ -55,7 +54,7 @@ content:
     region: content
   field_vih_event_end_date:
     type: datetime_default
-    weight: 5
+    weight: 4
     region: content
     label: hidden
     settings:
@@ -64,7 +63,7 @@ content:
     third_party_settings: {  }
   field_vih_event_start_date:
     type: datetime_default
-    weight: 4
+    weight: 3
     region: content
     label: hidden
     settings:
@@ -73,7 +72,7 @@ content:
     third_party_settings: {  }
   field_vih_image:
     type: image
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
@@ -81,6 +80,7 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
+  body: true
   field_metatag: true
   field_vih_cource_contact_person: true
   field_vih_course_subheading: true
