--- a/config/sync/core.entity_form_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_short_course.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - entity_browser.browser.image_browser
     - field.field.node.vih_short_course.body
     - field.field.node.vih_short_course.field_metatag
+    - field.field.node.vih_short_course.field_short_description
     - field.field.node.vih_short_course.field_vih_course_heading
     - field.field.node.vih_short_course.field_vih_course_subheading
     - field.field.node.vih_short_course.field_vih_cs_contact_person
@@ -52,6 +53,7 @@ third_party_settings:
         - field_vih_course_heading
         - field_vih_course_subheading
         - body
+        - field_short_description
       parent_name: ''
       weight: 1
       format_type: tab
@@ -133,6 +135,14 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
+  field_short_description:
+    weight: 9
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
+    region: content
   field_vih_course_heading:
     weight: 6
     settings:
@@ -150,7 +160,7 @@ content:
     type: string_textfield
     region: content
   field_vih_cs_contact_person:
-    weight: 11
+    weight: 12
     settings:
       match_operator: CONTAINS
       size: 60
@@ -173,7 +183,7 @@ content:
     type: paragraphs
     region: content
   field_vih_sc_end_date:
-    weight: 8
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
@@ -193,7 +203,7 @@ content:
     region: content
   field_vih_sc_option_groups:
     type: paragraphs
-    weight: 10
+    weight: 11
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -206,21 +216,21 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_sc_persons_limit:
-    weight: 12
+    weight: 13
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_sc_price:
-    weight: 9
+    weight: 10
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_sc_start_date:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
