--- a/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
+++ b/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.embedded_teaser_list
     - field.field.node.event.body
     - field.field.node.event.field_metatag
+    - field.field.node.event.field_short_description
     - field.field.node.event.field_vih_cource_contact_person
     - field.field.node.event.field_vih_course_heading
     - field.field.node.event.field_vih_course_subheading
@@ -24,7 +25,6 @@ dependencies:
     - datetime
     - image
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -37,23 +37,14 @@ targetEntityType: node
 bundle: event
 mode: embedded_teaser_list
 content:
-  body:
+  field_short_description:
+    type: basic_string
+    weight: 1
+    region: content
     label: hidden
-    type: text_default
-    weight: 2
     settings: {  }
     third_party_settings: {  }
-    region: content
   field_vih_event_end_date:
-    type: datetime_default
-    weight: 4
-    region: content
-    label: hidden
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-  field_vih_event_start_date:
     type: datetime_default
     weight: 3
     region: content
@@ -62,9 +53,18 @@ content:
       format_type: medium
       timezone_override: ''
     third_party_settings: {  }
+  field_vih_event_start_date:
+    type: datetime_default
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
   field_vih_image:
     type: image
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
@@ -72,6 +72,7 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
+  body: true
   field_metatag: true
   field_vih_cource_contact_person: true
   field_vih_course_heading: true
