--- a/config/sync/core.entity_view_display.node.vih_short_course.list_advanced.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.list_advanced.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.list_advanced
     - field.field.node.vih_short_course.body
     - field.field.node.vih_short_course.field_metatag
+    - field.field.node.vih_short_course.field_short_description
     - field.field.node.vih_short_course.field_vih_course_heading
     - field.field.node.vih_short_course.field_vih_course_subheading
     - field.field.node.vih_short_course.field_vih_cs_contact_person
@@ -25,7 +26,6 @@ dependencies:
     - datetime
     - image
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -38,14 +38,13 @@ targetEntityType: node
 bundle: vih_short_course
 mode: list_advanced
 content:
-  body:
-    label: hidden
-    type: text_trimmed
+  field_short_description:
+    type: basic_string
     weight: 1
-    settings:
-      trim_length: 150
-    third_party_settings: {  }
     region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_vih_sc_end_date:
     weight: 3
     label: hidden
@@ -77,6 +76,7 @@ content:
     weight: -20
     region: content
 hidden:
+  body: true
   field_banner: true
   field_metatag: true
   field_vih_course_heading: true
