--- a/config/sync/core.entity_view_display.node.vih_short_course.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.vih_short_course.body
     - field.field.node.vih_short_course.field_metatag
+    - field.field.node.vih_short_course.field_short_description
     - field.field.node.vih_short_course.field_vih_course_heading
     - field.field.node.vih_short_course.field_vih_course_subheading
     - field.field.node.vih_short_course.field_vih_cs_contact_person
@@ -25,7 +26,6 @@ dependencies:
     - datetime
     - image
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -38,13 +38,12 @@ targetEntityType: node
 bundle: vih_short_course
 mode: teaser
 content:
-  body:
-    type: text_trimmed
+  field_short_description:
+    type: basic_string
     weight: 1
     region: content
     label: hidden
-    settings:
-      trim_length: 150
+    settings: {  }
     third_party_settings: {  }
   field_vih_sc_end_date:
     type: datetime_default
@@ -74,6 +73,7 @@ content:
       format_type: vih_medium_date_short_month
     third_party_settings: {  }
 hidden:
+  body: true
   field_banner: true
   field_metatag: true
   field_vih_course_heading: true
