--- a/config/sync/field.field.node.vih_short_course.field_short_description.yml
+++ b/config/sync/field.field.node.vih_short_course.field_short_description.yml
@@ -10,7 +10,7 @@ field_name: field_short_description
 entity_type: node
 bundle: vih_short_course
 label: 'Forkortet beskrivelse'
-description: ''
+description: 'Bruges til bl.a. teasers, listevisning o.l.'
 required: false
 translatable: true
 default_value: {  }
