--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,9 @@
         "drupal/views_send": "^1.3",
         "drupal/recreate_block_content": "^2.0",
         "drupal/webform_mailchimp": "^5.3",
-        "drupal/owlcarousel": "^1.0@alpha"
+        "drupal/owlcarousel": "^1.0@alpha",
+        "drupal/easy_breadcrumb": "^1.8",
+        "drupal/block_scheduler": "^1.0"
     },
     "repositories": [
         {
