--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -4,6 +4,7 @@ module:
   bellcom_quickpay_integration: 0
   block: 0
   block_content: 0
+  block_scheduler: 0
   breakpoint: 0
   ckeditor: 0
   coffee: 0
@@ -23,6 +24,7 @@ module:
   datetime: 0
   datetime_tweaks: 0
   dblog: 0
+  easy_breadcrumb: 0
   editor: 0
   embed: 0
   entity: 0
