VI-365 Menu not shown if not translated translations.

--- a/config/sync/block.block.site_main_menu.yml
+++ b/config/sync/block.block.site_main_menu.yml
@@ -23,4 +23,6 @@ settings:
   label_display: '0'
   level: 1
   depth: 2
+  only_translated_labels: 1
+  only_translated_content: 0
 visibility: {  }
