--- a/config/sync/core.base_field_override.paragraph.long_course_list_contain_class.created.yml
+++ b/config/sync/core.base_field_override.paragraph.long_course_list_contain_class.created.yml
@@ -1,19 +1,18 @@
-uuid: 66277467-91fa-48c2-bfb8-d8ead32a4996
+uuid: cb31c662-a24e-4294-a169-9dfd469d1fc0
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_vih_heading
     - paragraphs.paragraphs_type.long_course_list_contain_class
-id: paragraph.long_course_list_contain_class.field_vih_heading
-field_name: field_vih_heading
+id: paragraph.long_course_list_contain_class.created
+field_name: created
 entity_type: paragraph
 bundle: long_course_list_contain_class
-label: Overskrift
-description: ''
+label: 'Authored on'
+description: 'The time that the Paragraph was created.'
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string
+field_type: created
