--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -69,6 +69,7 @@ module:
   media_entity_facebook: 0
   media_entity_instagram: 0
   media_entity_twitter: 0
+  menu_multilingual: 0
   menu_ui: 0
   metatag: 0
   metatag_facebook: 0
