--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
         "drupal/views_send": "^1.3",
         "drupal/recreate_block_content": "^2.0",
         "drupal/webform_mailchimp": "^5.3",
-        "drupal/owlcarousel": "^1.0@alpha"
+        "drupal/owlcarousel": "^1.0@alpha",
+        "drupal/menu_multilingual": "^1.0@alpha"
     },
     "repositories": [
         {
