--- a/config/sync/block.block.site_main_menu_mobile.yml
+++ b/config/sync/block.block.site_main_menu_mobile.yml
@@ -21,4 +21,6 @@ settings:
   label_display: visible
   level: 1
   depth: 0
+  only_translated_labels: 1
+  only_translated_content: 0
 visibility: {  }
