--- a/config/sync/core.base_field_override.menu_link_content.menu_link_content.metatag.yml
+++ b/config/sync/core.base_field_override.menu_link_content.menu_link_content.metatag.yml
@@ -1,18 +1,18 @@
-uuid: fad96a40-fadd-4398-a42c-7ec0b51e334e
+uuid: daff3dc6-67e8-4755-8dd9-372ec819c1cc
 langcode: da
 status: true
 dependencies:
   module:
     - menu_link_content
-id: menu_link_content.menu_link_content.description
-field_name: description
+id: menu_link_content.menu_link_content.metatag
+field_name: metatag
 entity_type: menu_link_content
 bundle: menu_link_content
-label: Description
-description: 'Shown when hovering over the menu link.'
+label: Metatags
+description: 'The metatags for the entity.'
 required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string
+field_type: map
