--- a/config/sync/core.base_field_override.paragraph.vih_content_grid.created.yml
+++ b/config/sync/core.base_field_override.paragraph.vih_content_grid.created.yml
@@ -1,19 +1,18 @@
-uuid: fbe25350-7556-4e47-8593-5b8734cef509
+uuid: fd8a040a-4335-43f4-87bb-35543da9b2d7
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_vih_heading
     - paragraphs.paragraphs_type.vih_content_grid
-id: paragraph.vih_content_grid.field_vih_heading
-field_name: field_vih_heading
+id: paragraph.vih_content_grid.created
+field_name: created
 entity_type: paragraph
 bundle: vih_content_grid
-label: Overskrift
-description: ''
+label: 'Authored on'
+description: 'The time that the Paragraph was created.'
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string
+field_type: created
