--- a/config/sync/field.field.paragraph.vih_content_grid.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.vih_content_grid.field_vih_background_color.yml
@@ -14,7 +14,7 @@ bundle: vih_content_grid
 label: Baggrundsfarve
 description: 'Vælg hvilken baggrundsfarve denne sektion skal have.'
 required: true
-translatable: true
+translatable: false
 default_value:
   -
     value: white
