--- a/config/sync/views.view.my_classes_terms.yml
+++ b/config/sync/views.view.my_classes_terms.yml
@@ -1,6 +1,6 @@
 uuid: 95d549cb-031c-4723-b30c-d14b0c59b30a
 langcode: da
-status: false
+status: true
 dependencies:
   config:
     - field.storage.paragraph.field_vih_description
