--- a/config/sync/field.field.user.user.field_vih_user_photo.yml
+++ b/config/sync/field.field.user.user.field_vih_user_photo.yml
@@ -11,10 +11,10 @@ id: user.user.field_vih_user_photo
 field_name: field_vih_user_photo
 entity_type: user
 bundle: user
-label: Billede
+label: Photo
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
