--- a/config/sync/system.menu.footer.yml
+++ b/config/sync/system.menu.footer.yml
@@ -5,6 +5,6 @@ dependencies: {  }
 _core:
   default_config_hash: 7yrlW5z9zdg2eBucB2GPqXKSMQfH9lSRSO4DbWF7AFc
 id: footer
-label: 'Sidefod - første'
+label: 'Sidefod - sektioner'
 description: 'Placeres i footer - second'
 locked: true
