--- a/config/sync/views.view.my_classes_terms.yml
+++ b/config/sync/views.view.my_classes_terms.yml
@@ -5,8 +5,11 @@ dependencies:
   config:
     - field.storage.paragraph.field_vih_description
     - field.storage.paragraph.field_vih_heading
+    - field.storage.paragraph.field_vih_photo
+    - image.style.medium
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
+    - image
     - paragraphs
     - taxonomy
     - text
@@ -325,6 +328,70 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_vih_photo:
+          id: field_vih_photo
+          table: paragraph__field_vih_photo
+          field: field_vih_photo
+          relationship: field_vih_paragraphs
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: image
+          settings:
+            image_style: medium
+            image_link: ''
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         nothing:
           id: nothing
           table: views
@@ -336,7 +403,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "    <a href=\"{{ tid }}\" class=\"element-wrapper-link\">\n        <div class=\"boxy boxy--my-course\">\n            <div class=\"boxy__body\">\n                <div class=\"row row--equal-height-columns\">\n                    <div class=\"col-xs-12 col-sm-4 col-md-3\">\n                        <div class=\"photo\">\n                            {{ field_vih_photo }}\n\n                            <div class=\"photo__overlay\">\n                                <div class=\"photo__overlay__text\">\n                                    {{ field_vih_heading }}\n                                </div>\n                            </div>\n                        </div>\n                    </div>\n                    <div class=\"col-xs-12 col-sm-8 col-md-9\">\n                        <div class=\"boxy__content\">\n                            <h3>{{ name_1 }}</h3>\n\n                            {{ field_vih_description }}\n                        </div>\n                    </div>\n                </div>\n            </div>\n        </div>\n    </a>"
+            text: "    <a href=\"{{ tid }}\" class=\"element-wrapper-link\">\n        <div class=\"boxy boxy--my-course\">\n            <div class=\"boxy__body\">\n                <div class=\"row row--equal-height-columns\">\n                    <div class=\"col-xs-12 col-sm-4 col-md-3\">\n                        <div class=\"photo\">\n                            {{ field_vih_photo }}\n\n                            <div class=\"photo__overlay\">\n                                <div class=\"photo__overlay__text\">\n                                    {{ name_1 }}\n                                </div>\n                            </div>\n                        </div>\n                    </div>\n                    <div class=\"col-xs-12 col-sm-8 col-md-9\">\n                        <div class=\"boxy__body\">\n                            <h3>{{ field_vih_heading }}</h3>\n\n                            {{ field_vih_description }}\n                        </div>\n                    </div>\n                </div>\n            </div>\n        </div>\n    </a>"
             make_link: false
             path: ''
             absolute: false
@@ -497,6 +564,7 @@ display:
       tags:
         - 'config:field.storage.paragraph.field_vih_description'
         - 'config:field.storage.paragraph.field_vih_heading'
+        - 'config:field.storage.paragraph.field_vih_photo'
   embedded_embedded:
     display_plugin: embed
     id: embedded_embedded
@@ -515,3 +583,4 @@ display:
       tags:
         - 'config:field.storage.paragraph.field_vih_description'
         - 'config:field.storage.paragraph.field_vih_heading'
+        - 'config:field.storage.paragraph.field_vih_photo'
