--- a/config/sync/core.entity_form_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.file.default.yml
@@ -14,7 +14,6 @@ dependencies:
   module:
     - entity_browser
     - field_group
-    - file
     - link
     - text
     - workbench_moderation
@@ -85,11 +84,17 @@ content:
     type: link_default
     region: content
   file:
-    type: file_generic
+    type: entity_browser_file
     weight: 2
     region: content
     settings:
-      progress_indicator: throbber
+      entity_browser: media_browser
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_edit: true
+      open: false
+      view_mode: default
+      preview_image_style: thumbnail
     third_party_settings: {  }
 hidden:
   created: true
