--- a/config/sync/core.entity_view_display.paragraph.vih_banner_slide.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_banner_slide.default.yml
@@ -6,10 +6,8 @@ dependencies:
     - field.field.paragraph.vih_banner_slide.field_vih_banner_image
     - field.field.paragraph.vih_banner_slide.field_vih_banner_text
     - field.field.paragraph.vih_banner_slide.field_vih_link
-    - image.style.banner
     - paragraphs.paragraphs_type.vih_banner_slide
   module:
-    - image
     - link
 id: paragraph.vih_banner_slide.default
 targetEntityType: paragraph
@@ -17,12 +15,13 @@ bundle: vih_banner_slide
 mode: default
 content:
   field_vih_banner_image:
-    weight: 0
+    weight: 3
     label: hidden
     settings:
-      image_style: banner
+      view_mode: vih_banner
+      link: false
     third_party_settings: {  }
-    type: image_url
+    type: entity_reference_entity_view
     region: content
   field_vih_banner_text:
     weight: 1
