--- a/config/sync/field.field.paragraph.vih_banner_slide.field_vih_banner_image.yml
+++ b/config/sync/field.field.paragraph.vih_banner_slide.field_vih_banner_image.yml
@@ -1,12 +1,11 @@
-uuid: a41582aa-cd84-461e-aa76-8d1027ec36b5
+uuid: da66fcb5-a739-43a8-9564-4ca34a6dc52f
 langcode: da
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_vih_banner_image
+    - media.type.image
     - paragraphs.paragraphs_type.vih_banner_slide
-  module:
-    - image
 id: paragraph.vih_banner_slide.field_vih_banner_image
 field_name: field_vih_banner_image
 entity_type: paragraph
@@ -18,21 +17,12 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  file_extensions: 'png gif jpg jpeg'
-  alt_field: true
-  alt_field_required: true
-  title_field: false
-  title_field_required: false
-  max_resolution: ''
-  min_resolution: ''
-  default_image:
-    uuid: null
-    alt: ''
-    title: ''
-    width: null
-    height: null
-  file_directory: '[date:custom:Y]-[date:custom:m]'
-  max_filesize: ''
-  handler: 'default:file'
-  handler_settings: {  }
-field_type: image
+  handler: 'default:media'
+  handler_settings:
+    target_bundles:
+      image: image
+    sort:
+      field: _none
+    auto_create: false
+    auto_create_bundle: ''
+field_type: entity_reference
