--- a/config/sync/field.storage.paragraph.field_vih_banner_image.yml
+++ b/config/sync/field.storage.paragraph.field_vih_banner_image.yml
@@ -1,27 +1,17 @@
-uuid: 613be8b5-f4ac-4d95-9c0a-53d8570fed4a
+uuid: eeef1647-385a-4e69-b578-cedd4d37952b
 langcode: da
 status: true
 dependencies:
   module:
-    - file
-    - image
+    - media
     - paragraphs
 id: paragraph.field_vih_banner_image
 field_name: field_vih_banner_image
 entity_type: paragraph
-type: image
+type: entity_reference
 settings:
-  uri_scheme: public
-  default_image:
-    uuid: ''
-    alt: ''
-    title: ''
-    width: null
-    height: null
-  target_type: file
-  display_field: false
-  display_default: false
-module: image
+  target_type: media
+module: core
 locked: false
 cardinality: 1
 translatable: true
