--- a/config/sync/image.style.banner.yml
+++ b/config/sync/image.style.banner.yml
@@ -1,14 +1,24 @@
 uuid: 342f47e1-d094-4d0d-ada9-d78df8e2865a
 langcode: da
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - focal_point
 name: banner
 label: Banner
 effects:
   94ccc0ac-9b3b-453e-8252-3cc6af1150f1:
     uuid: 94ccc0ac-9b3b-453e-8252-3cc6af1150f1
     id: image_scale_and_crop
-    weight: 1
+    weight: -9
     data:
       width: 1920
       height: 900
+  d36528aa-2cf3-49e9-892a-928484738959:
+    uuid: d36528aa-2cf3-49e9-892a-928484738959
+    id: focal_point_scale_and_crop
+    weight: -10
+    data:
+      width: 1920
+      height: 900
+      crop_type: focal_point
