--- a/config/sync/field.field.user.user.field_vih_top_banner_text.yml
+++ b/config/sync/field.field.user.user.field_vih_top_banner_text.yml
@@ -12,8 +12,8 @@ entity_type: user
 bundle: user
 label: 'Tekst på banner'
 description: ''
-required: true
-translatable: false
+required: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
