--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -3,7 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_browser
+    - entity_browser.browser.image_browser
     - field.field.taxonomy_term.vih_class.field_metatag
     - field.field.taxonomy_term.vih_class.field_short_description
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
@@ -44,10 +44,10 @@ third_party_settings:
       region: content
     group_class_details:
       children:
-        - field_vih_class_image
         - field_short_description
         - field_vih_class_color
         - field_vih_class_class_packages
+        - field_vih_class_image
       parent_name: ''
       weight: 3
       format_type: tab
@@ -209,14 +209,14 @@ content:
     type: entity_browser_entity_reference
     weight: 1
     settings:
-      entity_browser: media_browser
+      entity_browser: image_browser
       field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
+      open: true
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: thumbnail
-      open: true
     region: content
     third_party_settings: {  }
   langcode:
