--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -3,7 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_browser
+    - entity_browser.browser.image_browser
     - field.field.node.event.body
     - field.field.node.event.field_metatag
     - field.field.node.event.field_short_description
@@ -49,11 +49,11 @@ third_party_settings:
       region: content
     group_content:
       children:
-        - field_vih_image
+        - field_short_description
         - field_vih_course_heading
         - field_vih_course_subheading
         - body
-        - field_short_description
+        - field_vih_image
       parent_name: ''
       weight: 1
       format_type: tab
@@ -229,14 +229,14 @@ content:
     type: entity_browser_entity_reference
     weight: 2
     settings:
-      entity_browser: media_browser
+      entity_browser: image_browser
       field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
+      open: true
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: thumbnail
-      open: true
     region: content
     third_party_settings: {  }
   langcode:
