--- a/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
@@ -3,7 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_browser
+    - entity_browser.browser.image_browser
     - field.field.node.vih_long_cource.body
     - field.field.node.vih_long_cource.field_metatag
     - field.field.node.vih_long_cource.field_short_description
@@ -66,7 +66,6 @@ third_party_settings:
       region: content
     group_course_details:
       children:
-        - field_vih_course_image
         - field_vih_course_status
         - field_vih_course_periods
         - field_vih_course_persons_limit
@@ -74,6 +73,7 @@ third_party_settings:
         - field_vih_course_subsc_price
         - field_vih_course_price
         - field_vih_cource_contact_person
+        - field_vih_course_image
       parent_name: ''
       weight: 3
       format_type: tab
@@ -241,14 +241,14 @@ content:
     type: entity_browser_entity_reference
     weight: 2
     settings:
-      entity_browser: media_browser
+      entity_browser: image_browser
       field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
+      open: true
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: thumbnail
-      open: true
     region: content
     third_party_settings: {  }
   langcode:
