--- a/config/sync/core.base_field_override.block_content.banner.metatag.yml
+++ b/config/sync/core.base_field_override.block_content.banner.metatag.yml
@@ -1,18 +1,18 @@
-uuid: 8108f08e-63b8-421a-9cb1-e68416a3d53e
+uuid: 551050f1-42d3-477d-b6d1-54857afa450c
 langcode: da
 status: true
 dependencies:
   config:
     - block_content.type.banner
-id: block_content.banner.info
-field_name: info
+id: block_content.banner.metatag
+field_name: metatag
 entity_type: block_content
 bundle: banner
-label: 'Block description'
-description: 'A brief description of your block.'
-required: true
+label: Metatags
+description: 'The metatags for the entity.'
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string
+field_type: map
