VI-366 block translation

--- a/config/sync/field.field.block_content.banner.field_vih_banner_slides.yml
+++ b/config/sync/field.field.block_content.banner.field_vih_banner_slides.yml
@@ -15,7 +15,7 @@ bundle: banner
 label: 'Banner slides'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
