VI-328 Update configuration

--- a/config/sync/core.entity_form_display.paragraph.employee.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.employee.default.yml
@@ -82,6 +82,9 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  translation:
+    weight: 10
+    region: content
 hidden:
   created: true
   status: true
