--- a/config/sync/core.entity_form_display.paragraph.article.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.article.default.yml
@@ -82,6 +82,9 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+  translation:
+    weight: 10
+    region: content
 hidden:
   created: true
   status: true
