--- a/config/sync/core.entity_form_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.file.default.yml
@@ -91,6 +91,9 @@ content:
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
+  translation:
+    weight: 10
+    region: content
 hidden:
   created: true
   status: true
