--- a/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
@@ -69,6 +69,9 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  translation:
+    weight: 10
+    region: content
 hidden:
   created: true
   status: true
