--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -34,12 +34,14 @@ module:
   entity_reference: 0
   entity_reference_revisions: 0
   eva: 0
+  examples: 0
   field: 0
   field_group: 0
   field_ui: 0
   file: 0
   filter: 0
   focal_point: 0
+  form_api_example: 0
   help: 0
   history: 0
   image: 0
@@ -106,6 +108,7 @@ module:
   video_embed_field: 0
   video_embed_media: 0
   video_embed_wysiwyg: 0
+  vies_application: 0
   views_infinite_scroll: 0
   views_send: 0
   views_ui: 0
