--- a/config/sync/image.style.banner_small.yml
+++ b/config/sync/image.style.banner_small.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   module:
+    - crop
     - focal_point
 name: banner_small
 label: 'Banner - small'
@@ -10,15 +11,21 @@ effects:
   481e2d10-f80c-4df6-a14d-7cb10226894f:
     uuid: 481e2d10-f80c-4df6-a14d-7cb10226894f
     id: image_scale_and_crop
-    weight: -9
+    weight: -8
     data:
       width: 1920
       height: 600
   e7d8c97c-5b87-43e0-8ed5-03ab4e34fafb:
     uuid: e7d8c97c-5b87-43e0-8ed5-03ab4e34fafb
     id: focal_point_scale_and_crop
-    weight: -10
+    weight: -9
     data:
       width: 1920
       height: 600
+      crop_type: focal_point
+  b7f51ffa-8172-4790-a499-bfa641f75377:
+    uuid: b7f51ffa-8172-4790-a499-bfa641f75377
+    id: crop_crop
+    weight: -10
+    data:
       crop_type: focal_point
