--- a/config/sync/image.style.class_packages_frontpage.yml
+++ b/config/sync/image.style.class_packages_frontpage.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   module:
+    - crop
     - focal_point
 name: class_packages_frontpage
 label: 'Class Packages (Frontpage)'
@@ -21,4 +22,10 @@ effects:
     data:
       width: 290
       height: 350
+      crop_type: focal_point
+  3e49fb1d-d80f-4254-8d6e-502ad7c15c0a:
+    uuid: 3e49fb1d-d80f-4254-8d6e-502ad7c15c0a
+    id: crop_crop
+    weight: 3
+    data:
       crop_type: focal_point
