--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -15,4 +15,5 @@ permissions:
   - 'create vih_event_order content'
   - 'create vih_long_course_order content'
   - 'create vih_short_course_order content'
+  - 'display eu cookie compliance popup'
   - 'view media'
