--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -34,6 +34,7 @@ module:
   entity_embed: 0
   entity_reference: 0
   entity_reference_revisions: 0
+  eu_cookie_compliance: 0
   eva: 0
   field: 0
   field_group: 0
